--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.datasource.username=chatbot
 spring.datasource.password=chatbot
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.type-aliases-package=com.probe.user
+
+
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate= ERROR
+com.example=ERROR
+debug=true
