--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.username=chatbot
 spring.datasource.password=chatbot
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.type-aliases-package=com.probe.user
-
+server.address=172.27.0.96
+server.port=8080
 
 
 logging.level.org.springframework.web=DEBUG
