--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate= ERROR
 com.example=ERROR
 debug=true
+spring.thymeleaf.cache: false
